--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,194 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* Variables */
+:root {
+  --color-primary: #fd6f00;
+  --color-secondary: #000;
+  --color-white: #fff;
+  --color-red: #ff0000;
+  --font-primary: "Poppins", "arial";
+}
+/* Nav Area */
+.nav-area-wrapper {
+  box-shadow: 0px 4px 11px 0px rgba(2, 2, 2, 0.11);
+}
+.nav-area {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.nav-area .logo-area img {
+  max-width: 40px;
+  max-height: 40px;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.nav-area nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+.nav-area nav ul a {
+  text-decoration: none;
+  color: var(--color-secondary);
+  font-family: var(--font-primary);
+  font-size: 18px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  letter-spacing: 0.63px;
 }
-button:hover {
-  border-color: #646cff;
+.nav-button-area {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Primary Button */
+.btn-primary {
+  border-radius: 5px;
+  background: var(--color-primary);
+  padding: 8px 18px;
+  color: var(--color-white);
+  font-family: var(--font-primary);
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  letter-spacing: 0.63px;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  display: inline-block;
+}
+.btn-primary:hover {
+  background: var(--color-white);
+  color: var(--color-secondary);
+  box-shadow: 0px 4px 11px 0px rgba(2, 2, 2, 0.11);
+}
+/* .nav-bar .anticon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  border: 2px solid gainsboro;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: orange;
+}
+.ant-menu {
+  margin-top: 40px;
+} */
+
+/* Custom Global Container */
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
   }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+.container-fluid {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Banner */
+.banner-wrapper {
+  /* background-image: url("https://res.cloudinary.com/dsc0hliud/image/upload/v1737998136/nchm9kmexyu6jzerzbpp.jpg"); */
+  /* background-image: url("https://img.freepik.com/premium-photo/bright-school-supplies-blackboard-background_392895-298992.jpg"); */
+  background-image: url("https://img.freepik.com/premium-photo/back-school-stationery-banner_925613-48235.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  padding: 120px 0;
+}
+
+/* Banner */
+.banner-content {
+}
+.banner-content .banner-back-to-school {
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-clip: text;
+  margin-bottom: 10px;
+}
+.banner-content .banner-big-sale {
+  font-size: 48px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--color-white);
+  background: var(--color-red);
+  display: inline-block;
+  padding: 5px 10px;
+  /* border-radius: 4px; */
+  margin-top: 10px;
+}
+.banner-content .banner-discount {
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--color-white);
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.banner-content .banner-para {
+  margin-bottom: 30px;
+}
+
+/* Section title */
+.section-title {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.section-title .title {
+  font-size: 48px;
+  font-weight: 600;
+  font-family: var(--font-primary);
+}
+/* Section gap */
+.section-gap-100 {
+  margin: 100px 0;
 }
